@@ -3,16 +3,6 @@
 
 package com.microsoft.typespec.http.client.generator.mgmt.template;
 
-import com.azure.core.http.HttpHeaders;
-import com.azure.core.http.rest.Response;
-import com.azure.core.management.polling.PollResult;
-import com.azure.core.management.polling.PollerFactory;
-import com.azure.core.util.Context;
-import com.azure.core.util.CoreUtils;
-import com.azure.core.util.polling.AsyncPollResponse;
-import com.azure.core.util.polling.LongRunningOperationStatus;
-import com.azure.core.util.polling.PollerFlux;
-import com.azure.core.util.serializer.SerializerEncoding;
 import com.microsoft.typespec.http.client.generator.core.extension.plugin.JavaSettings;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ClassType;
 import com.microsoft.typespec.http.client.generator.core.model.javamodel.JavaClass;
@@ -25,12 +15,8 @@ import java.lang.reflect.Type;
 import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
 
 public class FluentServiceClientTemplate extends ServiceClientTemplate {
 
@@ -38,7 +24,7 @@ public class FluentServiceClientTemplate extends ServiceClientTemplate {
     static {
         if (JavaSettings.getInstance().isFluentLite()) {
             MethodTemplate getContextMethod = MethodTemplate.builder()
-                .imports(Collections.singleton(Context.class.getName()))
+                .imports(List.of(ClassType.CONTEXT.getFullName()))
                 .methodSignature("Context getContext()")
                 .comment(comment -> {
                     comment.description("Gets default client context.");
@@ -48,7 +34,8 @@ public class FluentServiceClientTemplate extends ServiceClientTemplate {
                 .build();
 
             MethodTemplate mergeContextMethod = MethodTemplate.builder()
-                .imports(Arrays.asList(Context.class.getName(), CoreUtils.class.getName(), Map.class.getName()))
+                .imports(
+                    List.of(ClassType.CONTEXT.getFullName(), ClassType.CORE_UTILS.getFullName(), Map.class.getName()))
                 .methodSignature("Context mergeContext(Context context)")
                 .comment(comment -> {
                     comment.description("Merges default client context with provided context.");
@@ -59,9 +46,9 @@ public class FluentServiceClientTemplate extends ServiceClientTemplate {
                 .build();
 
             MethodTemplate getLroResultMethod = MethodTemplate.builder()
-                .imports(Arrays.asList(PollerFlux.class.getName(), PollResult.class.getName(), Mono.class.getName(),
-                    Flux.class.getName(), Response.class.getName(), ByteBuffer.class.getName(), Type.class.getName(),
-                    PollerFactory.class.getName()))
+                .imports(List.of(ClassType.POLLER_FLUX.getFullName(), ClassType.POLL_RESULT.getFullName(),
+                    ClassType.MONO.getFullName(), ClassType.FLUX.getFullName(), ClassType.RESPONSE.getFullName(),
+                    ByteBuffer.class.getName(), Type.class.getName(), ClassType.POLLER_FACTORY.getFullName()))
                 .methodSignature(
                     "<T, U> PollerFlux<PollResult<T>, U> getLroResult(Mono<Response<Flux<ByteBuffer>>> activationResponse, HttpPipeline httpPipeline, Type pollResultType, Type finalResultType, Context context)")
                 .comment(comment -> {
@@ -80,7 +67,7 @@ public class FluentServiceClientTemplate extends ServiceClientTemplate {
                 .build();
 
             MethodTemplate getLroResultSyncMethod = MethodTemplate.builder()
-                .imports(Arrays.asList(PollResult.class.getName(), ClassType.RESPONSE.getFullName(),
+                .imports(List.of(ClassType.POLL_RESULT.getFullName(), ClassType.RESPONSE.getFullName(),
                     Type.class.getName(), ClassType.SYNC_POLLER_FACTORY.getFullName(),
                     ClassType.BINARY_DATA.getFullName(), ClassType.SYNC_POLLER.getFullName()))
                 .methodSignature(
@@ -100,13 +87,13 @@ public class FluentServiceClientTemplate extends ServiceClientTemplate {
                 .build();
 
             MethodTemplate getLroFinalResultOrErrorMethod = MethodTemplate.builder()
-                .imports(List.of(PollerFlux.class.getName(), PollResult.class.getName(), Mono.class.getName(),
-                    AsyncPollResponse.class.getName(), FluentType.MANAGEMENT_ERROR.getFullName(),
-                    FluentType.MANAGEMENT_EXCEPTION.getFullName(), ClassType.HTTP_RESPONSE.getFullName(),
-                    LongRunningOperationStatus.class.getName(), SerializerEncoding.class.getName(),
-                    IOException.class.getName(),
+                .imports(List.of(ClassType.POLLER_FLUX.getFullName(), ClassType.POLL_RESULT.getFullName(),
+                    ClassType.MONO.getFullName(), ClassType.ASYNC_POLL_RESPONSE.getFullName(),
+                    FluentType.MANAGEMENT_ERROR.getFullName(), FluentType.MANAGEMENT_EXCEPTION.getFullName(),
+                    ClassType.HTTP_RESPONSE.getFullName(), ClassType.LONG_RUNNING_OPERATION_STATUS.getFullName(),
+                    ClassType.SERIALIZER_ENCODING.getFullName(), IOException.class.getName(),
                     // below import is actually used in HttpResponseImpl
-                    HttpHeaders.class.getName(), Charset.class.getName(), StandardCharsets.class.getName()))
+                    ClassType.HTTP_HEADERS.getFullName(), Charset.class.getName(), StandardCharsets.class.getName()))
                 .methodSignature(
                     "<T, U> Mono<U> getLroFinalResultOrError(AsyncPollResponse<PollResult<T>, U> response)")
                 .comment(comment -> {
